# ControlsForFake-gtk

./: .travis.yml  .travis.yml2  Animation.vala  PulseAudioColumn.cpp  README.md  SinkComboBoxHandler.vala  SlideAnimation.cpp  SourceComboBoxHandler.vala  SourceOutputComboBoxHandler.vala  SwitchMenu.vala  build.sh  glade.gresource.xml  main-fixed.glade  main.cpp  main.glade  main.vala  meson.build
icons/: app-icon.svgz
include/: PulseAudioColumn.h  SlideAnimation.h
po/: ControlsForFake-gtk.pot  fr.po  meson.build
ui/: main-fixed.glade  menus-common.ui
utils/: build.sh
vala/: Application.vala  Handler.vala  PulseAudioComboBoxHandler.vala  SinkInputComboBoxHandler.vala  SubscribeAndListenThread.vala
vapi/: cfake.vapi  config.vapi
